[package]
name = "lending-smart-contract"
version = "0.1.0"
edition = "2025"
authors = ["tkmy401 <hirokiyoshigawa@gmail.com>"]
description = "A professional lending smart contract built with Rust"
license = "MIT"

[dependencies]
# Core dependencies for smart contract development
ink = { version = "5.1.1", default-features = false }
parity-scale-codec = { version = "3.6.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

# Additional utilities
ink_storage = { version = "5.1.1", default-features = false }
ink_env = { version = "5.1.1", default-features = false }
ink_prelude = { version = "5.1.1", default-features = false }

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "ink_storage/std",
    "ink_env/std",
    "ink_prelude/std",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true

[profile.release.build-override]
opt-level = 3 